Fixing up current tests.

--- a/javasrc/uk/org/opentrv/test/cfg/dhd.conf
+++ b/javasrc/uk/org/opentrv/test/cfg/dhd.conf
@@ -1,6 +1,6 @@
 
     {
-        "serialPort" : "/dev/cu.usbserial-FTGACM4G",
+        "serialPort" : "/dev/serial/by-id/usb-FTDI_TTL232R-3V3_FTGW5R3C-if00-port0",
         "handlers": [
             {
                 "name": "File log",
